# off-chain-dex-aggregator

./: Cargo.toml  README.md
data/: db.json
data/abi/: KatanaV3Factory.json  NonfungiblePositionManager.json
examples/: katana.rs
examples/abi/: AggregateRouter.json  KatanaV3Pool.json
examples/katana/: Cargo.toml
examples/katana/src/: helpers.rs  lib.rs  main.rs  types.rs
smart-order-router/: Cargo.toml
smart-order-router/src/: helpers.rs  lib.rs
smart-order-router/src/adapters/: mod.rs  path.rs
src/: helpers.rs  lib.rs
src/adapters/: mod.rs  path.rs
