[package]
name = "off-chain-dex-aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.7.3", features = ["full", "node-bindings", "rpc-types-debug", "rpc-types-trace", "json-rpc", "rpc-client", "signer-aws", "signer-keystore", "signer-ledger", "signer-mnemonic", "signer-trezor", "signer-yubihsm", "rlp", "transports"] }

revm = { version = "19.4.0", features = ["alloydb", "dev"] }
revm-inspectors = "0.15.0"
revm-contract = { git = "https://github.com/aymantaybi/revm-contract" }
revm-contract-types = { git = "https://github.com/aymantaybi/revm-contract-types" }

eyre = "0.6.12"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }